# alembic

./: .gitignore  Cargo.toml  Makefile.toml  README.md  TODO  book.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  mdbook.yml  release.yml  windows-build.yml
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: main.rs  scanner.rs
crates/cli/src/commands/: account.rs  client.rs  dll.rs  inject.rs  launch.rs  mod.rs  scan.rs  server.rs
crates/cork/: Cargo.toml
crates/cork/src/: main.rs
crates/desktop/: Cargo.toml  build.rs
crates/desktop/installer/: installer.nsi
crates/desktop/src/: application.rs  backend.rs  fetching.rs  launch.rs  main.rs  simulator.rs
crates/desktop/src/widgets/: about.rs  accounts_community_servers_tab.rs  accounts_main_tab.rs  accounts_servers_tab.rs  accounts_tab.rs  binary_viewer.rs  components.rs  developer_logs_tab.rs  developer_main_tab_.rs  developer_network_incoming_tab.rs  developer_network_outgoing_tab.rs  developer_network_tab.rs  developer_tab.rs  game_chat_tab.rs  game_main_tab.rs  game_tab.rs  main_tab.rs  mod.rs  news.rs  settings.rs  settings_clients_tab.rs  settings_dlls_tab.rs  settings_tab.rs  tabs.rs  wizard.rs  wizard_end.rs  wizard_start.rs
crates/dll/: Cargo.toml
crates/dll/src/: channel.rs  client.rs  dll_state.rs  helpers.rs  hooks.rs  lib.rs  logging.rs  runtime.rs  state.rs
crates/dll/src/hooks/: macros.rs  mod.rs
crates/dll/src/hooks/chat/: mod.rs
crates/dll/src/hooks/net/: mod.rs
crates/docs/: development.md
crates/libalembic/: Cargo.toml
crates/libalembic/src/: acclient.rs  client_config.rs  inject.rs  inject_config.rs  injection_kit.rs  injector.rs  launch.rs  launcher.rs  lib.rs  rpc.rs  scanner.rs  settings.rs  util.rs  validation.rs
crates/libalembic/src/client_config/: mod.rs  traits.rs  windows.rs  wine.rs
crates/libalembic/src/hooks/: mod.rs
crates/libalembic/src/inject_config/: dll_type.rs  mod.rs
crates/libalembic/src/launcher/: launcher.rs  mod.rs  noop.rs  traits.rs  windows.rs  wine.rs
crates/libalembic/src/msg/: client_server.rs  mod.rs  server_gui.rs
crates/libalembic/src/win/: mod.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  main.rs  tabs.rs
docs/book/: SUMMARY.md  architecture.md  building.md  contributing.md  introduction.md
docs/book/architecture/: cli.md  desktop.md  dll.md  libalembic.md
scripts/: build_debug.bat  build_release.bat
src/: async_runtime.rs  backend.rs  client.rs  gui.rs  inject.rs  launch.rs  lib.rs  main.rs  rpc.rs  util.rs
src/hooks/: mod.rs
src/win/: mod.rs
