[workspace.package]
name = "alembic"
version = "0.1.0"
edition = "2021"
authors = ["Bryce Mecum <brycemecum@gmail.com>"]
description = "WIP"
license = "MIT"
repository = "https://github.com/amoeba/alembic"
readme = "README.md"

[workspace]
members = ["crates/cli", "crates/libalembic", "crates/desktop", "crates/dll"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.95"
env_logger = "0.11.6"
log = "0.4.22"
tarpc = { version = "0.35.0", features = ["serde-transport-json", "tcp"] }
tokio = { version = "1.43.0", features = ["macros", "net", "rt-multi-thread"] }
