[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Bryce Mecum <brycemecum@gmail.com>"]
description = "WIP"
license = "MIT"
repository = "https://github.com/amoeba/alembic"
readme = "README.md"

[workspace]
members = [
  "crates/cli",
  "crates/libalembic",
  "crates/desktop",
  "crates/dll",
  "crates/tui",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.95"
env_logger = "0.11.6"
futures = "0.3.31"
log = "0.4.22"
once_cell = "1.20.2"
rand = "0.8.5"
tarpc = { version = "0.35.0", features = ["serde-transport-json", "tcp"] }
tokio = { version = "1.43.0", features = ["macros", "net", "rt-multi-thread"] }

[workspace.dependencies.retour]
version = "0.3"
features = ["thiscall-abi"]

[workspace.dependencies.windows]
version = "0.58.0"
features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_SystemServices",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_LibraryLoader",
  "Win32_Storage_FileSystem",
  "Win32_System_Console",
  "Win32_System_Memory",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
]
