[package]
name = "cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "CLI for Alembic"
readme.workspace = true
repository.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.1"
crossterm = "0.27"
ctrlc = { version = "3.4.5", features = ["termination"] }
libalembic = { path = "../libalembic" }
ratatui = "0.28"
