[package]
name = "cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "CLI for Alembic"
readme.workspace = true
repository.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.1"
libalembic = { path = "../libalembic" }
