[package]
name = "desktop"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Desktop application for Alembic"
readme.workspace = true
repository.workspace = true
license.workspace = true
default-run = "desktop"

[[bin]]
name = "desktop"
path = "src/main.rs"

[[bin]]
name = "simulator"
path = "src/simulator.rs"

[dependencies]
anyhow = { workspace = true }
chrono = "0.4.39"
ctrlc = "3.4.5"
eframe = "0.33.2"
egui_commonmark = "0.22.0"
egui_extras = { version = "0.33.2", features = ["image"] }
env_logger = { workspace = true }
futures = { workspace = true }
image = "0.25.10"
libalembic = { path = "../libalembic" }
log = { workspace = true }
rand = { workspace = true }
reqwest = { version = "0.13.2", features = ["blocking"] }
ringbuffer = "0.15.0"
serde = "1.0.217"
serde_json = "1.0.138"
serde_with = "3.18.0"
serde-xml-rs = "0.8.2"
tarpc = { workspace = true }
tokio = { workspace = true }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.15"
