[package]
name = "dll"
description = "Injectable DLL for Alembic"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[lib]
name = "alembic"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
libalembic = { path = "../libalembic" }
once_cell = { workspace = true }
tarpc = { workspace = true }
tokio = { workspace = true }

[target.'cfg(windows)'.dependencies]
retour = { workspace = true }
windows = { workspace = true }
