[package]
name = "dll"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Injectable DLL for Alembic"
readme.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]
name = "alembic"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
libalembic = { path = "../libalembic" }
once_cell = { workspace = true }
tarpc = { workspace = true }
tokio = { workspace = true }

[target.'cfg(windows)'.dependencies]
retour = { workspace = true }
windows = { workspace = true }
