[package]
name = "dll"
description = "Injectable DLL for Alembic"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[lib]
name = "alembic"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
libalembic = { path = "../libalembic" }
once_cell = { workspace = true }
paste = "1.0"
tarpc = { workspace = true }
tokio = { workspace = true }

[target.'cfg(all(target_os = "windows", target_env = "msvc"))'.dependencies]
dll-syringe = { version = "0.15.2", features = ["payload-utils"] }
retour = { workspace = true, features = ["thiscall-abi"] }
windows = { workspace = true }
