[package]
name = "libalembic"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Library for Alembic"
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
ctor = "0.2.9"
directories = "6.0.0"
once_cell = { workspace = true }
region = "3.0.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
tarpc = { workspace = true }
tokio = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
retour = { workspace = true }
widestring = "1.1.0"
windows = { workspace = true }

[target.'cfg(all(target_os = "windows", target_env = "msvc"))'.dependencies]
dll-syringe = { version = "0.17.0", optional = true }

[features]
default = []
# Enable Alembic launcher support (requires nightly Rust for dll-syringe)
alembic = ["dll-syringe"]
full = ["alembic"]
