[package]
name = "tui"
description = "TUI for Alembic"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
strum = { version = "0.27.0", features = ["derive", "strum_macros"] }
