[package]
name = "tui"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "TUI for Alembic"
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
crossterm = "0.28.1"
futures = { workspace = true }
libalembic = { path = "../libalembic" }
ratatui = "0.29.0"
strum = { version = "0.27.0", features = ["derive", "strum_macros"] }
tarpc = { workspace = true }
tokio = { workspace = true }
